hw5/billing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kia-billing-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kia-billing-hw5
  template:
    metadata:
      labels:
        app: kia-billing-hw5
    spec:
      containers:
        - name: kia-otus-arch-billing
          image: ilyakozyrev/kia-otus-arch-billing:hw5
          imagePullPolicy: Always
          ports:
            - name: billing-web
              containerPort: 8002
          livenessProbe:
            httpGet:
              port: 8002
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8002
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
