hw5/billing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kia-billing-service
  labels:
    app: kia-billing-hw5
spec:
  selector:
    app: kia-billing-hw5
  ports:
    - protocol: TCP
      port: 9002
      targetPort: billing-web
  type: NodePort
